2011-01-28  John W. Eaton  <jwe@octave.org>

	* eigs-base.cc: Assume we have ARPACK.

2011-01-27  John W. Eaton  <jwe@octave.org>

	* Sparse.cc (Sparse<T>::assign (const idx_vector&, const idx_vector&,
	const Sparse<T>&)): Allow 0x0 LHS with colon dimensions to
	inherit dimensions from RHS.  Fix tests.  Bug #32263.

2011-01-26  John W. Eaton  <jwe@octave.org>

	* oct-refcount.h: Strip trailing whitespace.

2011-01-24  Pascal Dupuis  <Pascal.Dupuis@worldonline.be>

	* SparseQR.h (class SparseQR::SparseQR_reps): Disallow copying.
	* Array.cc (class rec_permute_helper, class rec_index_helper,
	class  rec_resize_helper): Likewise.
	* cmd-edit.cc (class default_command_editor): Likewise.

2011-01-22  Jaroslav Hajek  <highegg@gmail.com>

	* oct-refcount.h: New source.
	* Makefile.am: Add it here.

	* Array.h: Use octave_refcount for refcounting.
	* Sparse.h: Ditto.
	* SparseCmplxQR.h: Ditto.
	* SparseQR.h: Ditto.
	* idx-vector.h: Ditto.
	* oct-shlib.h: Ditto.
	* sparse-base-chol.h: Ditto.

2011-01-21  Pascal Dupuis  <Pascal.Dupuis@worldonline.be>

	* oct-fftw.h (class octave_fftw_planner): Disallow copying
	(class octave_float_fftw_planner): Likewise.
	* oct-sort.h (class octave_sort): Likewise.
	(struct oct_sort::MergeState): Likewise.
	* SparseCmplxQR.h (class SparseComplexQR::SparseComplexQR_rep):
	Likewise.
	* sparse-base-chol.h (class sparse_base_cho::sparse_base_chol_rep):
	Likewise.

2011-01-21  John W. Eaton  <jwe@octave.org>

	* CMatrix.cc (xgemm): Initialize output matrix for call to ZHERK.
	* fCMatrix.cc (xgemm): Initialize output matrix for call to CHERK.

2011-01-20  John W. Eaton  <jwe@octave.org>

	* Array-b.cc, Array-d.cc, Array-f.cc, Array-util.cc,
	Array-util.h, Array.cc, Array.h, Array3.h, CColVector.cc,
	CColVector.h, CDiagMatrix.cc, CDiagMatrix.h, CMatrix.cc,
	CMatrix.h, CNDArray.cc, CNDArray.h, CSparse.cc, CSparse.h,
	CmplxAEPBAL.cc, CmplxAEPBAL.h, CmplxCHOL.cc, CmplxGEPBAL.cc,
	CmplxGEPBAL.h, CmplxHESS.cc, CmplxLU.h, CmplxQR.cc, CmplxQR.h,